--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,6 @@
 <resources>
-    <string name="app_name">TessaractTestApp</string>
+    <string name="app_name">Tessaract Test App</string>
     <string name="action_settings">Settings</string>
-
-    <string name="hello">Hello World, DatumDroidOCRActivity!</string>
-    <string name="button_text">OCR!</string>
-    <string name="text_hint">OCRed Text will appear here</string>
-
-
-
+    <string name="recognizeButtonText">Recognize</string>
+    <string name="text_hint">Recognized text will appear here</string>
 </resources>
