--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="recognizeButtonText">Recognize</string>
     <string name="text_hint">Recognized text will appear here</string>
+    <string name="cropButtonText">Crop</string>
 </resources>
